# INFO253B-Back-End-Web-Architecture

./: .env.example  .gitignore  Dockerfile  LEARNINGS.md  README.md  app.py  library.json  proposal.md  schemas.py  todo.py
app/: Dockerfile  app.py  docker-compose.yml  requirement.txt  requirements-dev.txt  requirements.txt  schemas.py
app/auth/: pyproject.toml
app/auth/src/: dependencies.py  example.py
app/instance/: data.db
app/models/: command.py
app/scraper/: README.md  extract_classes_info.py  get_classes_for_term.py
app/search/: Dockerfile  docker-compose.yml  pyproject.toml
app/search/src/: main.py
app/search/src/search/: config.py  db.py  main.py  models.py  schemas.py
app/search/src/search/api/: main.py
app/search/src/search/api/routes/: chat.py  courses.py
app/search/src/search/auth/: dependencies.py
app/search/src/search/services/: __init__.py  agent.py  course_search.py  crud.py  system_prompt.md
app/search/src/search/utils/: parse_csv_to_json.py
app/search/src/utils/: parse_csv_to_json.py
assignment-1/: README.md  app.py
assignment-2/: README.md
assignment-2/app/: requirements.txt
assignment-2/app/models/: command.py
group-project-team-7/: .env.example  .gitignore  .pre-commit-config.yaml  README.md
group-project-team-7/app/: Dockerfile  docker-compose_serverless.yml  pyproject.toml
group-project-team-7/app/search/src/search/: db.py  main.py  models.py
group-project-team-7/app/search/src/search/auth/: dependencies.py
group-project-team-7/app/search/src/search/services/: agent.py  course_search.py  crud.py  system_prompt.md
group-project-team-7/app/search/src/search/utils/: load_data_to_mongo.py
lab-1/: README.md
lab-2/: app.py  library.json
lab-3/: app.py
lab-4/: .gitignore  README.md
lab-4/models/: flights.py
lab-4/resources/: flight_routes.py
models/: __init__.py  airlines.py
resources/: airline_routes.py  song.py
shrug/: .flaskenv  app.py
